--- a/style.css
+++ b/style.css
@@ -84,3 +84,41 @@ h1{
    background-color: rgb(253, 253, 191);
    padding: 50px;
 }
+
+.input-field{
+    background-color: #FFF4D6;
+    width: 300px;
+    padding: 40px 80px;
+    margin: auto;
+}
+.email-input{
+    border: none;
+   background-color: #D9D9D9;
+   padding: 8px 15px;
+   border-radius: 3px;
+}
+.submit-input{
+    border: none;
+   background-color: #FF5959;
+   padding: 8px 15px;
+   border-radius: 3px;
+   color: #D9D9D9;
+}
+
+.footer{
+    color: #FF5959;
+    font-family: 'Lobster';
+    font-size: 30px;
+    margin-bottom: 5px;
+    margin-top: 10px;
+}
+.para-footer{
+    color: #D9DBE1;
+    font-size:10px;
+}
+.footer-area{
+    background-color: #0B0D17;
+   background-size: cover;
+   padding: 15px 0;
+   margin-bottom: 0;
+}
