added more writing part

--- a/style.css
+++ b/style.css
@@ -37,6 +37,14 @@ a{
    font-size: 20px;
     
 }
+.Homestead-youth{
+    margin: 30px 110px;
+}
+.border{
+    border: 4px solid rgb(98, 98, 248);
+    width: 90px;
+    border-radius: 20px;
+}
 .donate-amount{
     display: flex;
     margin-bottom: 100px;
@@ -64,6 +72,7 @@ hr{
 }
 h1{
     font-size: 35px;
+    margin-bottom: 15px;
 }
 .donate-plan{
     display: flex;
@@ -80,9 +89,20 @@ h1{
     background-color: #ffe1e1;
     padding: 50px;
 }
-.education{
+.volunteer{
    background-color: rgb(253, 253, 191);
    padding: 50px;
+}
+.project-goal{
+    gap: 50px;
+    margin: 30px 100px;
+}
+.learn-more{
+    text-decoration: none;
+    background-color: gainsboro;
+    color: rgb(25, 24, 24);
+    padding: 10px 25px;
+    border-radius: 5px;
 }
 
 .input-field{
